<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_schedule"
        android:icon="@drawable/ic_event_note_black_24dp"
        android:orderInCategory="0"
        android:title="@string/title_schedule" />

    <item
        android:id="@+id/navigation_history"
        android:icon="@drawable/ic_history_black_24dp"
        android:orderInCategory="1"
        android:title="@string/title_history" />

    <item
        android:id="@+id/navigation_point"
        android:icon="@drawable/ic_star_black_24dp"
        android:orderInCategory="2"
        android:title="@string/title_point" />

    <item
        android:id="@+id/navigation_notification"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:orderInCategory="3"
        android:title="@string/title_notification" />

</menu>
