<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/background_gradient"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="medion.tango.LoginActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_centerVertical="true"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="32dp"
        android:gravity="center">

        <TextView
            android:layout_margin="16dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="sans-serif"
            android:text="@string/welcome"
            android:textColor="#fff"
            android:textSize="24sp" />

        <EditText
            android:layout_margin="8dp"
            android:id="@+id/input_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_rectangle_edittext"
            android:hint="@string/username"
            android:inputType="textCapCharacters"
            android:padding="8dp"
            android:textColor="#80FFFFFF"
            android:textColorHint="#80FFFFFF" />

        <EditText
            android:layout_margin="8dp"
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:background="@drawable/bg_rectangle_edittext"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="8dp"
            android:textColor="#80FFFFFF"
            android:textColorHint="#80FFFFFF" />

        <Button
            android:id="@+id/button_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/bg_rectangle_button"
            android:text="@string/login"
            android:textColor="#FFF" />

    </LinearLayout>
</RelativeLayout>
